# python-bc

./: float.py  readme.md
Bootcamp - Python para dados/: README.md
class-01/: challenge.py  example_00.py  kpi.py  main.py  teste.py
class-02/: Ana.py  bool.py  challenge.py  exercises.py  float.py  integer.py  strings.py
class-03/: alternatives.py  exercises03.py  if.py  test.py
class-06/: pyproject.toml
class-17/: exemplo_01.py  pyproject.toml
class-18/: exemplo_00.py  pyproject.toml
class-20/: projeto-crud.py  pyproject.toml
