[tool.poetry]
name = "class-06"
version = "0.1.0"
description = ""
authors = ["AnaRitaRangel <106035404+AnaRitaRangel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
