[tool.poetry]
name = "class-17"
version = "0.1.0"
description = ""
authors = ["AnaRitaRangel <106035404+AnaRitaRangel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
