[project]
name = "class-20"
version = "0.1.0"
description = ""
authors = [
    {name = "AnaRitaRangel",email = "106035404+AnaRitaRangel@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
